# terminal2F

./: .gitignore  README.md  cv.html  learning.paquet  lorem_processor.py  markdown_table.md  packagey.json  pyproject.toml
experiments/tools_vs_notools/v1/: __init__.py
learning.lance/_transactions/: 0-de0ce32e-65c4-4482-927b-9603aeaa6abb.txn  1-d334fbe8-0b88-4ac4-9856-9d0803e47a26.txn  2-faed5f0c-8602-4b70-b88f-d59cdc66e6c8.txn  3-e8e40742-43ce-41f9-8a31-204c034d7980.txn
learning.lance/_versions/: 1.manifest  2.manifest  3.manifest  4.manifest
logs/: my_app.log.jsonl
nuggets/: config.json  experiment_simple_boilerplate.py  fsm.py  logger_example.py  mylogger.py  nanocode_tools.py
nuggets/JSON_PDA_PARSER_TOOL/: automata.py  json_manipulata.py  main.py  mistral_curl.py  mistral_sdk.py  package_data.json
nuggets/jinja/: c.json  d.html  jinja.py  render.py
nuggets/jinja/templates/: cv.html.j2
scrapyard/: sql.py
scrapyard/scratchpad/: graphs.py
scrapyard/scratchpad/reeruun/: demo_3.py  demo_4.py  logging_1.py  main.py
scrapyard/src/terminal2f/: agent.py  cli.py  experiments.py  main.py  repomix-output.xml  telemetry_rerun.py
scratchpad/reeruun/: agent.py  config.json  demo_1.py  demo_2.py  demo_4_time.py  learning_1.py  main.py  mylogger.py
scratchpad/reeruun/theagent/: agent.py  config.json  (+4 more)
src/terminal2f/: __init__.py  agent.py  agent_profiles.py  automaton.py  cli.py  config.json  control_tower.py  datamodel.py  env.py  envs.py  fsm.py  learning.py  learnings.py  main.py  memory.py  mylogger.py  repomix-output.xml  run.py  states.py  tools.py
(+22 files in other folders)
